--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 *.bin filter=lfs diff=lfs merge=lfs -text
 *.img filter=lfs diff=lfs merge=lfs -text
+*.iso filter=lfs diff=lfs merge=lfs -text
+Yocto/jammy-server-cloudimg-amd64.img.backup filter=lfs diff=lfs merge=lfs -text
